# summer-2020-curiculum

./: readme.md
01-linear-models/: matmul.py  readme.md
02-autoregression/: readme.md
03-classification/: classify.py  readme.md
04-nn-basics/: readme.md
04-nn-basics/np-nn/: network.py  readme.md  weight-only-network.py  weights-and-biases.py
05-convnet/: cifar10.py  evaluate_network.py  network.py  readme.md  torch-network.py
06-cuda/: readme.md
06-cuda/cuda-examples/: Makefile
06-cuda/cuda-examples/0-problem-formulation/: Makefile  main.cpp
06-cuda/cuda-examples/1-threads/: Makefile  main.cpp
06-cuda/cuda-examples/2-cuda/: Makefile  main.cu
06-cuda/example-project/: CMakeLists.txt
06-cuda/example-project/src/: CMakeLists.txt
06-cuda/example-project/src/driver/: CMakeLists.txt
06-cuda/example-project/src/lib/: CMakeLists.txt  kernels.cu
06.5-final-project-prep/: readme.md
07-fft-nn-audio-clf/: driver.py  fft.py  network.py  readme.md  viz.py
07.5-final-project-prep-continued/: readme.md
as1/: gen_data.py  matmul.py  readme.md
as2/: autoreg.py
bonus-lessons/01-shell-scripting/: readme.md
